--- a/CryptxApp/package.json
+++ b/CryptxApp/package.json
@@ -21,6 +21,7 @@
     "@tanstack/query-async-storage-persister": "^5.74.6",
     "@tanstack/react-query": "^5.74.4",
     "@tanstack/react-query-persist-client": "^5.74.6",
+    "axios": "^1.9.0",
     "d3-shape": "^3.2.0",
     "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
